@@ -104,7 +104,7 @@ public class ReceivingUtils {
             LocalDateTime endDate = getDate(allParams.get(ReceivingConstants.RECEIPTDATEEND) + ReceivingConstants.TIMESTAMP_TIME_ZERO);
             Period diff = Period.between(startDate.toLocalDate(), endDate.toLocalDate());
             int adjustedMonthsTodDisplay =
-                    new Double(Math.ceil((diff.toTotalMonths() + 2) / monthsPerShard.doubleValue()) * monthsPerShard)
+                    Double.valueOf(Math.ceil((diff.toTotalMonths() + 2) / monthsPerShard.doubleValue()) * monthsPerShard)
                             .intValue();
             partitionKeyCriteria =
                     Criteria.where(ReceivingConstants.RECEIVING_SHARD_KEY_FIELD)
@@ -138,7 +138,7 @@ public class ReceivingUtils {
             LocalDateTime endDate = getDate(allParams.get(ReceivingConstants.RECEIPTDATEEND) + ReceivingConstants.TIMESTAMP_TIME_ZERO);
             Period diff = Period.between(startDate.toLocalDate(), endDate.toLocalDate());
             int adjustedMonthsTodDisplay =
-                    new Double(Math.ceil((diff.toTotalMonths() + 2) / monthsPerShard.doubleValue()) * monthsPerShard)
+                    Double.valueOf(Math.ceil((diff.toTotalMonths() + 2) / monthsPerShard.doubleValue()) * monthsPerShard)
                             .intValue();
 
             partitionKeyList = Arrays.asList(ReceivingUtils.getPartitionKeyList(String.valueOf(storeNumber),
